NO-JIRA: [Broker-J] Refactor HTTP management system tests
Use explicit broker and virtual-host HTTP ports so tests no longer override the Host header. Migrate the HTTP test transport to java.net.http.HttpClient and provision trusted TLS material at runtime.